Act comp falta javadoc con errores

--- a/Ejer 2 - Composite - Grupo G - 2024 PooII/POOII - TP 3 - Patrones de Diseño - (Ejer 2 Composite) - Grupo G - 2024/nbproject/project.properties
+++ b/Ejer 2 - Composite - Grupo G - 2024 PooII/POOII - TP 3 - Patrones de Diseño - (Ejer 2 Composite) - Grupo G - 2024/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Ejercicio1-_Patron_Composite_-Grupo_G-2024-POOII.jar
+dist.jar=${dist.dir}/Ejercicio2-_Patron_Composite_-Grupo_G-2024-POOII.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Ejercicio1-_Patron_Composite_-Grupo_G-2024-POOII
+dist.jlink.output=${dist.jlink.dir}/Ejercicio2-_Patron_Composite_-Grupo_G-2024-POOII
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Ejercicio1-_Patron_Composite_-Grupo_G-2024-POOII
-main.class=Ejercicio1Patron_CompositeGrupo_G2024POOII
+jlink.launcher.name=Ejercicio2-_Patron_Composite_-Grupo_G-2024-POOII
+main.class=PrincipalCliente
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
