--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 /Ejer 3 - Template Method- Grupo G - 2024 PooII/POOII - TP 3 - Patrones de Diseño - (Ejer 3 Template Method) - Grupo G - 2024/build/
+/Ejer 3 - Template Method- Grupo G - 2024 PooII/POOII - TP 3 - Patrones de Diseño - (Ejer 3 Template Method) - Grupo G - 2024/dist/
